--- a/templates/invoice/template.html.j2
+++ b/templates/invoice/template.html.j2
@@ -177,8 +177,8 @@
       <div class="col-span-1 flex flex-col justify-center text-lg font-extrabold text-gray-100">
         <p class="text-vertical">NOTES</p>
       </div>
-      <div class="col-span-5 flex flex-col p-4 text-sm">
-        <span>{{ content }}</span>
+      <div class="col-span-5 flex flex-col p-4 text-sm leading-tight prose">
+        {{ content }}
       </div>
       <div class="col-span-1"></div>
       <div
